tests/e2e/semantics/foreach_invalid5.story
foreach items as key, value
    x = 0
